# equvator

./: CMakeLists.txt  LICENSE  README.md  build.sh
docker/: readme.md
docker/sdk/: Dockerfile
docker/sdk/buildfiles/: build-boost.sh  build-mapnik.sh  build-proj.sh
lib/: CMakeLists.txt
lib/Eigen/: CMakeLists.txt
lib/OpenCV/: package-unix.sh  package-win.sh
lib/docker/: Dockerfile  build-gdal.sh  build-opencv.sh  readme.md
lib/docker/buildfiles/: build-wxwidgets.sh
lib/googletest/: CMakeLists.txt
lib/wxWidgets/: package-unix.sh  package-win.sh
src/app/: CMakeLists.txt  DataProvider.cpp  DataProvider.h  VideoCanvas.cpp  VideoCanvas.h  main.cpp  resource.xrc
tests/: CMakeLists.txt
